# kcore

./: .gitignore  ARCHITECTURE.md  BUILD_ISO.md  BUILD_ISO_REMOTE.md  BUILD_NODE_AGENT.md  CNAME  COMMANDS.md  Cargo.toml  FINAL_TEST_SUMMARY.md  INTEGRATION_TEST_COMPLETE.md  KCTL_REFERENCE.md  LICENSE  Makefile  NEXT_STEPS.md  PRICING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELEASE_NOTES.template.md  WRITE_USB.md  build-iso-podman-no-seccomp.sh  build-iso-podman.sh  build-iso-remote.sh  debian12-test2.yaml  devbox.json  fix-iso-mbr.sh  flake.nix  go.mod  go.sum  index.html  monitor-build.sh  nix_shell  node-current-configuration.nix  node-ovn-configuration.nix  result  styles.css  verify-usb-bootable.sh  write-usb.sh
certs/: README.md  ca.srl  controller.csr  node-new.csr  node.conf  node.crt.old  node.csr
crates/controller/: Cargo.toml  build.rs
crates/controller/src/: auth.rs  cluster_update_reconciler.rs  cluster_update_spec.rs  config.rs  db.rs  main.rs  nixgen.rs  node_client.rs  path_safety.rs  replication.rs  scheduler.rs
crates/controller/src/grpc/: admin.rs  controller.rs  mod.rs  signing.rs  validation.rs
crates/kctl/: Cargo.toml  build.rs
crates/kctl/src/: client.rs  config.rs  main.rs  output.rs  path_safety.rs  pki.rs
crates/kctl/src/commands/: apply.rs  certs.rs  cluster.rs  cluster_update.rs  container.rs  disk_layout.rs  image.rs  mod.rs  network.rs  node.rs  security_group.rs  ssh_key.rs  vm.rs  workload.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_MERMAID.md  Architecture.md  BUILD_ISO.md  COMMANDS.md  (+44 more)
(+304 files in other folders)
