[package]
name = "kcore-kctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", features = ["tls", "transport"] }

[build-dependencies]
tonic-build = "0.12"
